layout now more presentable, has footer, main content centered etc

--- a/app/views/goths/random.html.erb
+++ b/app/views/goths/random.html.erb
@@ -1,11 +1,11 @@
 <div id="goth">
 
-	<h3><%= @goth.name %></h3>
+	<h3>random goth (refresh for more)</h3>
 
 	<%= goth_image_tag @goth %>
 
 	<p>
-		vote for <%= goth_vote_link @goth %> on <%= link_to('gothornot.com', 'http://gothornot.com/') %>
+		<%= goth_vote_link @goth %>
 	</p>
 	
 </div>
