about page created and routed

--- a/public/stylesheets/hugagoth.css
+++ b/public/stylesheets/hugagoth.css
@@ -3,6 +3,11 @@
  * Steven Wilkin
  */
 
+
+/**
+ * general styles
+ */
+
 body {
 	background-color: #000000;
 	font-family: arial;
@@ -19,9 +24,24 @@ a:hover {
 	color: #666666;
 }
 
+h3 {
+	font-size: 20px;
+	margin: 0 0 10px 0;
+}
+
+p {
+	margin: 10px 0 5px 0;
+}
+
+
+/**
+ * main layout
+ */
+
 #wrapper {
 	margin: 20px 75px;;
 }
+
 
 #header {
 }
@@ -39,16 +59,32 @@ a:hover {
 	color: #666666;
 }
 
+#header ul {
+	position: absolute;
+	right: 75px;
+	top: 30px;
+}
+
 #content {
 	margin: 30px 0 35px 0;
 }
 
+#footer {
+	font-size: 12px;
+	text-align: center;
+}
+
+
+/**
+ * goth profile pic
+ */
 #goth {
 	margin: 0 auto;
 	text-align: center;
 }
 
 #goth h3 {
+	font-size: 15px;
 	margin: 0 0 5px 0;
 }
 
@@ -56,7 +92,11 @@ a:hover {
 	margin: 5px 0 0;
 }
 
-#footer {
-	font-size: 12px;
-	text-align: center;
+
+/**
+ * page specific styles
+ */
+
+#about {
+	width: 50%;
 }
