--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,15 @@
 <!-- begin #wrapper -->
 <div id="wrapper">
 
+	<!-- begin #header -->
 	<div id="header">
 		<h1><%= link_to 'hug a goth', :root %></h1>
 		<h2>and put a smile on the face of the damned</h2>
+		<ul>
+			<li><%= link_to 'about', :about %></li>
+		</ul>
 	</div>
+	<!-- end #header -->
 	
 	<div id="content">
 		
