--- a/public/stylesheets/hugagoth.css
+++ b/public/stylesheets/hugagoth.css
@@ -24,7 +24,7 @@ a:hover {
 	color: #666666;
 }
 
-h3 {
+h2 {
 	font-size: 20px;
 	margin: 0 0 10px 0;
 }
@@ -65,13 +65,18 @@ p {
 	top: 30px;
 }
 
+#header ul li {
+	float: left;
+	padding: 0 0 0 7px;
+}
+
 #content {
 	margin: 30px 0 35px 0;
 }
 
 #footer {
 	font-size: 12px;
-	text-align: center;
+	text-align: right;
 }
 
 
@@ -98,5 +103,9 @@ p {
  */
 
 #about {
+	width: 50%;
+}
+
+#disclaimer {
 	width: 50%;
 }
