pagination markup and styling

--- a/app/views/goths/index.html.erb
+++ b/app/views/goths/index.html.erb
@@ -15,4 +15,4 @@
 
 </ul>
 
-<%= will_paginate @goths %>
+<%= will_paginate @goths, :page_links => false, :next_label => 'Older &raquo;', :prev_label => '&laquo; Newer' %>
