--- a/app/views/goths/about.html.erb
+++ b/app/views/goths/about.html.erb
@@ -1,6 +1,6 @@
 <div id="about">
 
-	<h2>About hugagoth.com</h2>
+	<h2>about hugagoth.com</h2>
 	
 	<p>
 	hugagoth.com is a learning exercise in the use of the <%= link_to 'ruby', 'http://www.ruby-lang.org/' %>
