--- a/public/stylesheets/hugagoth.css
+++ b/public/stylesheets/hugagoth.css
@@ -26,7 +26,7 @@ a:hover {
 
 h2 {
 	font-size: 20px;
-	margin: 0 0 10px 0;
+	margin: 0 0 5px 0;
 }
 
 p {
@@ -81,22 +81,17 @@ p {
 
 
 /**
- * goth profile pic
+ * goths
  */
-#goth {
-	margin: 0 auto;
+
+#goth p, ul#goths li p {
+	margin: 5px auto;
 	text-align: center;
 }
 
-#goth h3 {
-	font-size: 15px;
-	margin: 0 0 5px 0;
+ul#goths li {
+	margin: 0 0 20px 0;
 }
-
-#goth p {
-	margin: 5px 0 0;
-}
-
 
 /**
  * page specific styles
