--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,16 +28,54 @@
 	
 	<div id="content">
 		
+		<div id="ads_right">
+			<script type="text/javascript"><!--
+			google_ad_client = "pub-2758710432338755";
+			/* hugagoth.com right skyscraper */
+			google_ad_slot = "0175437426";
+			google_ad_width = 120;
+			google_ad_height = 600;
+			//-->
+			</script>
+			<script type="text/javascript"
+				src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+			</script>
+		</div>
+
 		<%= @content_for_layout %>
 	
 	</div>
 	
 	<div id="footer">
+		<div id="ads_footer">
+			<script type="text/javascript"><!--
+			google_ad_client = "pub-2758710432338755";
+			/* hugagoth.com footer links */
+			google_ad_slot = "5203176853";
+			google_ad_width = 468;
+			google_ad_height = 15;
+			//-->
+			</script>
+			<script type="text/javascript"
+			src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+			</script>
+		</div>
 		&copy; 2008 <%= link_to 'Steven Wilkin', 'http://stevenwilkin.com' %>
 	</div>
 
 </div>
 <!-- end #wrapper -->
+
+<script type="text/javascript">
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+	try {
+		var pageTracker = _gat._getTracker("UA-2764682-7");
+		pageTracker._trackPageview();
+	} catch(err) {}
+</script>
 
 </body>
 
