info about publishing schedule and rss feed

--- a/app/views/goths/about.html.erb
+++ b/app/views/goths/about.html.erb
@@ -13,6 +13,10 @@
 	</p>
 	
 	<p>
+	a new image is published 3 times a day and an rss feed is available
+	</p>
+	
+	<p>
 	the site as such serves no practical use but if you have any questions you can get in touch via
 	<%= link_to 'stevenwilkin.com', 'http://stevenwilkin.com' %>
 	</p>
